--- a/resources/view/layout/header.html
+++ b/resources/view/layout/header.html
@@ -9,19 +9,23 @@
                 <div class="collapse navbar-collapse mt-2 mb-2">
                     <ul class="navbar-nav m-auto">
                         <form class="d-flex" role="search">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search" id="header-search">
+                            <input class="form-control" type="search" placeholder="Search" aria-label="Search" id="header-search" th:placeholder="#{index.header.input.placeholder.search}">
                         </form>
                         <li class="nav-item menu-item me-3 ms-4">
-                            <a href="/doc" type="button" class="btn btn-yellow" target="_blank">Swagger API</a>
+                            <a href="/doc" type="button" class="btn btn-yellow" target="_blank" th:text="#{index.header.button.docs}">Swagger API</a>
                         </li>
                     </ul>
                     <div th:if="${authUser} == null">
-                        <a href="/view/login" type="button" class="btn btn-orange">Login/Register</a>
+                        <a href="/view/login" type="button" class="btn btn-orange" th:text="#{index.header.button.login}">Login/Register</a>
                     </div>
+                    <li class="nav-item menu-item" id="lang">
+                        <a class="nav-link sidebar-nav-link lang" style="display: inline" href="?lang=en"><span class="ms-4">EN</span></a>
+                        <a class="nav-link sidebar-nav-link lang" style="display: inline" href="?lang=ru"><span class="ms-4">RU</span></a>
+                    </li>
                     <th:block th:if="${authUser} != null">
-                        <a href="/ui/profile" type="button" class="btn btn-orange"><i class="fa-solid fa-address-card"></i> Profile</a>
+                        <a href="/ui/profile" type="button" class="btn btn-orange" th:text="#{index.header.link.profile}"><i class="fa-solid fa-address-card"></i> Profile</a>
                         <form action="/ui/logout" method="post" class="mx-2">
-                            <button class="btn btn-yellow btn-orange" type="submit"><i class="fa-solid fa-sign-out"></i> Logout</button>
+                            <button class="btn btn-yellow btn-orange" type="submit" th:text="#{index.header.button.logout}"><i class="fa-solid fa-sign-out"></i> Logout</button>
                         </form>
                     </th:block>
                 </div>
